--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -24,6 +24,9 @@ const { title, description, image = '/blog-placeholder-1.jpg' } = Astro.props;
 <link rel="preload" href="/fonts/atkinson-regular.woff" as="font" type="font/woff" crossorigin />
 <link rel="preload" href="/fonts/atkinson-bold.woff" as="font" type="font/woff" crossorigin />
 
+<!-- Devicon preloads -->
+<link rel="stylesheet" type='text/css' href="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/devicon.min.css" />
+
 <!-- Canonical URL -->
 <link rel="canonical" href={canonicalURL} />
 
