add markdown files

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -18,11 +18,15 @@ import { SITE_TITLE, SITE_DESCRIPTION } from "../consts";
         <div>
           <h1 class="text-4xl font-bold">Table of Contents</h1>
           <ul>
-            <li>Introduction</li>
-            <li>LSP Spec</li>
-            <li>Implement in Go</li>
-            <li>DAP</li>
-            <li>Automation</li>
+            <li>
+              <a href="/slides/intro"> Introduction </a>
+            </li>
+            <li><a href="/slides/lsp-spec">LSP Spec </a></li>
+            <li>
+              <a href="/slides/implement-in-go"> Implement in Go </a>
+            </li>
+            <li><a href="/slides/dap"> DAP </a></li>
+            <li><a href="/slides/automation"> Automation </a></li>
           </ul>
         </div>
       </div>
