add layout for markdown files

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -33,7 +33,7 @@ import { SITE_TITLE, SITE_DESCRIPTION } from "../consts";
       <div class="flex items-center justify-center">
         <img
           src="/go-gopher-svgrepo-com.svg"
-          class="h-72 w-72"
+          class="h-72 w-72 hover:scale-110 transition-transform animate-bounce duration-500 ease-in-out cursor-pointer"
           alt="Go Gopher"
         />
       </div>
