--- a/src/layouts/BlogPost.astro
+++ b/src/layouts/BlogPost.astro
@@ -1,12 +1,8 @@
 ---
-import type { CollectionEntry } from "astro:content";
 import BaseHead from "../components/BaseHead.astro";
 import Header from "../components/Header.astro";
-import FormattedDate from "../components/FormattedDate.astro";
 
-type Props = CollectionEntry<"blog">["data"];
-
-const { title, description, pubDate, updatedDate, heroImage } = Astro.props;
+const { title, description } = Astro.props;
 ---
 
 <html lang="en">
@@ -55,33 +51,28 @@ const { title, description, pubDate, updatedDate, heroImage } = Astro.props;
 
   <body>
     <Header />
-    <main>
-      <article>
-        <div class="hero-image">
-          {
-            heroImage && (
-              <img width={1020} height={510} src={heroImage} alt="" />
-            )
-          }
-        </div>
+    <div class="flex">
+      <aside class="p-8 border-r-2 w-80">
+        <nav>
+          <h2 class="text-2xl font-semibold">Table of Contents</h2>
+          <ul>
+            <li>
+              <a href="/slides/intro"> Introduction </a>
+            </li>
+            <li><a href="/slides/lsp-spec">LSP Spec </a></li>
+            <li>
+              <a href="/slides/implement-in-go"> Implement in Go </a>
+            </li>
+            <li><a href="/slides/dap"> DAP </a></li>
+            <li><a href="/slides/automation"> Automation </a></li>
+          </ul>
+        </nav>
+      </aside>
+      <main>
         <div class="prose">
-          <div class="title">
-            <div class="date">
-              <FormattedDate date={pubDate} />
-              {
-                updatedDate && (
-                  <div class="last-updated-on">
-                    Last updated on <FormattedDate date={updatedDate} />
-                  </div>
-                )
-              }
-            </div>
-            <h1>{title}</h1>
-            <hr />
-          </div>
           <slot />
         </div>
-      </article>
-    </main>
+      </main>
+    </div>
   </body>
 </html>
