--- a/src/layouts/BlogPost.astro
+++ b/src/layouts/BlogPost.astro
@@ -51,8 +51,8 @@ const { title, description } = Astro.props;
 
   <body>
     <Header />
-    <div class="flex">
-      <aside class="p-8 border-r-2 w-80">
+    <div class="flex flex-col md:flex-row">
+      <aside class="p-8 md:border-r-2 w-80">
         <nav>
           <h2 class="text-2xl font-semibold">Table of Contents</h2>
           <ul>
