--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -9,15 +9,15 @@ import { SITE_TITLE, SITE_DESCRIPTION } from "../consts";
   <head>
     <BaseHead title={SITE_TITLE} description={SITE_DESCRIPTION} />
   </head>
-  <body>
+  <body class="h-[80vh] lg:h-[75vh]">
     <Header />
     <main
-      class="flex flex-col md:flex-row gap-8 lg:gap-0 w-full max-w-screen-lg"
+      class="flex h-full flex-col md:flex-row gap-8 lg:gap-0 w-full items-center justify-center max-w-screen-lg"
     >
       <div class="flex flex-col gap-4 flex-1 items-center w-full">
         <div>
-          <h1 class="text-4xl font-bold">Table of Contents</h1>
-          <ul>
+          <h1 class="text-4xl font-bold mb-4">Table of Contents</h1>
+          <ul class="flex flex-col gap-2">
             <li>
               <a href="/slides/intro"> Introduction </a>
             </li>
