update pg 1 & start slide 2

--- a/src/layouts/BlogPost.astro
+++ b/src/layouts/BlogPost.astro
@@ -69,7 +69,7 @@ const { title, description } = Astro.props;
         </nav>
       </aside>
       <main>
-        <div class="prose">
+        <div class="">
           <slot />
         </div>
       </main>
