--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -9,24 +9,23 @@ import Layout from "../layouts/BlogPost.astro";
   heroImage="/blog-placeholder-about.jpg"
 >
   <h1 class="text-4xl mb-8">About Me</h1>
-  <p>Hi,</p>
+  <p>Hi, I'm Michael</p>
   <p>
-    I am a motivated and detail-oriented software engineer specializing in C#
-    .NET, SQL, Typescript, HTML and CSS. Avid debugger and problem-solver with
-    excellent communication skills and a knack for collaboration. I make
-    electronic music in my free time. Love old synthesizers and modern jazz.
-    Neovim enthusiast.
+    I'm a software engineer specializing in C# .NET, SQL, Typescript, HTML and
+    CSS. Avid debugger and problem-solver with excellent communication skills
+    and a knack for collaboration. I make electronic music in my free time. Love
+    old synthesizers and modern jazz. Neovim enthusiast.
   </p>
   <p>Currently learning Go and C.</p>
 
-  <div class="social-links">
+  <div class="flex gap-4">
     <a
       href="https://github.com/michael-duren"
       class="text-gray-950"
       target="_blank"
     >
       <span class="sr-only">Go to Michael Durens GitHub repo</span>
-      <i class="devicon-github-original text-2xl"></i>
+      <i class="devicon-github-original text-4xl"></i>
     </a>
     <a
       href="https://linkedin.com/in/michael-duren"
@@ -34,7 +33,7 @@ import Layout from "../layouts/BlogPost.astro";
       target="_blank"
     >
       <span class="sr-only">Go to Michael Durens Linkedin</span>
-      <i class="devicon-linkedin-plain text-2xl"></i>
+      <i class="devicon-linkedin-plain text-4xl"></i>
     </a>
   </div>
 </Layout>
